# azure-guest-attestation-sdk

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SUPPORT.md  deny.toml
.cargo/: config.toml
.config/: nextest.toml
.githooks/: pre-commit
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  rust-clippy.yml
crates/azure-guest-attestation-sdk/: Cargo.toml  README.md
crates/azure-guest-attestation-sdk/src/: client.rs  cose.rs  endorsement.rs  guest_attest.rs  lib.rs  parse.rs  report.rs  tests.rs
crates/azure-guest-attestation-sdk/src/guest_attest/: imds.rs  mod.rs  provider.rs
crates/azure-guest-attestation-sdk/src/tee_report/: mod.rs  snp.rs  td_quote.rs  tdx.rs  vbs.rs
crates/azure-guest-attestation-sdk/src/tpm/: attestation.rs  commands.rs  device.rs  event_log.rs  helpers.rs  mod.rs  types.rs
crates/azure-guest-attestation-sdk/tests/: integration.rs
crates/azure-tpm/: Cargo.toml  README.md
crates/azure-tpm/src/: commands.rs  device.rs  event_log.rs  helpers.rs  lib.rs  types.rs
extensions/azure-guest-attest-web/: README.md  deploy-linux.sh  deploy-windows.ps1
extensions/azure-guest-attest-web/linux/: install.sh
extensions/azure-guest-attest-web/windows/: install.ps1
scripts/: README.md  build-all.ps1  clean.ps1  clean.sh  coverage.ps1  setup.ps1  setup.sh
tools/azure-guest-attest/: BUILDING.md  Cargo.toml  build.rs
tools/azure-guest-attest-web/: Cargo.toml  README.md  build.rs
tools/azure-guest-attest-web/src/: main.rs
tools/azure-guest-attest-web/static/: api-docs.html  app.js  index.html  style.css
tools/azure-guest-attest/.cargo/: config.toml
tools/azure-guest-attest/src/: main.rs
tools/azure-tpm-tool/: Cargo.toml  README.md
tools/azure-tpm-tool/src/: main.rs
