[workspace]
resolver = "2"
members = [
    "crates/azure-guest-attestation-sdk",
    "tools/azure-guest-attest",
]

# Shared workspace metadata
[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/Azure/azure-guest-attestation-sdk"
authors = ["Microsoft Azure"]
rust-version = "1.76"

# Shared dependencies - members can use `workspace = true`
[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
hex = "0.4"
sha2 = "0.10"
sha1 = "0.10"
digest = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# CLI dependencies
# Pin to 4.5.x <=4.5.37 to keep clap_lex on 0.7.x (MSRV 1.76 compat)
clap = { version = ">=4.5,<=4.5.37", features = ["derive"] }
anyhow = "1.0"

# Crypto
aes-gcm = { version = "0.10", features = ["aes"] }
rand = { version = "0.8", features = ["std"] }

# HTTP - pin to 0.11 to avoid ICU dependency issues
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }

# Windows
windows-sys = { version = "0.52", features = ["Win32_System_Registry", "Win32_Foundation"] }

# Internal crates
azure-guest-attestation-sdk = { path = "crates/azure-guest-attestation-sdk" }
