[package]
name = "azure-tpm"
version = "0.1.0"
description = "Platform-agnostic TPM 2.0 command interface for Azure guest VMs"
documentation = "https://docs.rs/azure-tpm"
readme = "README.md"
keywords = ["tpm", "tpm2", "attestation", "azure", "confidential-computing"]
categories = ["cryptography", "hardware-support"]

# Inherit from workspace
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
name = "azure_tpm"

[dependencies]
ms-tpm-20-ref = { git = "https://github.com/microsoft/ms-tpm-20-ref-rs", features = ["vendored"], optional = true }
getrandom = { version = "0.2", optional = true }
bitfield-struct = "0.6"

# Workspace dependencies
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sha1.workspace = true
digest.workspace = true
hex.workspace = true
tracing.workspace = true
rand.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys.workspace = true

[features]
default = []
# Enable in-process reference TPM tests (pulls vendored OpenSSL via ms-tpm-20-ref)
vtpm-tests = ["ms-tpm-20-ref", "getrandom"]

[dev-dependencies]
