[package]
name = "azure-guest-attest"
version = "0.1.0"
description = "CLI tool for Azure Guest Attestation operations"

# Inherit from workspace
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
# Use workspace dependency for the SDK
azure-guest-attestation-sdk.workspace = true

# Workspace dependencies
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
hex.workspace = true
anyhow.workspace = true

# Tool-specific dependencies
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }

# Optional dependencies
x509-parser = { version = "0.16", optional = true }
jwt = { version = "0.16", optional = true }

[features]
default = []
with-x509 = ["x509-parser"]
static = []
